73266: Update Apple Xcode plug-in to support Xcode 6
Change-Id: Id31c44539b65911fd90de6ee0d985eaa9c9a2436

--- a/src/main/zip/plugin.xml
+++ b/src/main/zip/plugin.xml
@@ -516,7 +516,8 @@
       <property name="simDeviceType" required="true">
         <property-ui type="textBox"
                      label="Simulator Device Type"
-                     description="The name of the simulator device type. For example, iPhone 6 Plus or Resizable iPad."
+                     description="The name of the simulator device type. For example,
+                        iPhone 6 Plus or Resizable iPad."
                      default-value="${p?:resource/simulatorDeviceType}"/>
       </property>
       <property name="targetOS" required="true">
