77416: Update output property status.
Change-Id: If97abc8e81d680951da7a73ca6654d5386a8475b

--- a/src/main/zip/plugin.xml
+++ b/src/main/zip/plugin.xml
@@ -198,7 +198,7 @@
     </properties>
     <post-processing><![CDATA[
         if (properties.get("exitCode") != 0) {
-            properties.put(new java.lang.String("Status"), new java.lang.String("Error"));
+            properties.put(new java.lang.String("Status"), new java.lang.String("Failure"));
         }
         else {
             properties.put("Status", "Success");
