78463: Delete simulator step has Simulator name as required field
Change-Id: Ia1c05633478f8b371bcca7c3696011cd854219b6

--- a/src/main/zip/plugin.xml
+++ b/src/main/zip/plugin.xml
@@ -576,7 +576,7 @@
                         ${p?:Create Simulator/deviceID} property can be used."
                      default-value="${p?:resource/deviceID}"/>
       </property>
-      <property name="simName" required="true">
+      <property name="simName">
         <property-ui type="textBox"
                      label="Simulator Name"
                      description="The name of the simulator to delete, for example, myIphone."
