--- a/src/main/zip/plugin.xml
+++ b/src/main/zip/plugin.xml
@@ -47,7 +47,9 @@
       <property name="simName">
         <property-ui type="textBox"
                      label="Simulator Name"
-                     description="The name of the simulator to use, for example, myIphone."
+                     description="The name of the simulator to use, for example, myIphone. 
+                        Note: Both the Simulator Name and Target OS must be specified when 
+                        the Device Identifier is not specified."
                      default-value="${p?:resource/simulatorName}"/>
       </property>
       <property name="targetOS">
@@ -158,7 +160,9 @@
       <property name="simName">
         <property-ui type="textBox"
                      label="Simulator Name"
-                     description="The name of the simulator to use, for example, myIphone."
+                     description="The name of the simulator to use, for example, myIphone. 
+                        Note: Both the Simulator Name and Target OS must be specified when 
+                        the Device Identifier is not specified."
                      default-value="${p?:resource/simulatorName}"/>
       </property>
       <property name="targetOS">
@@ -257,7 +261,9 @@
       <property name="simName">
         <property-ui type="textBox"
                      label="Simulator Name"
-                     description="The name of the simulator to use, for example, myIphone."
+                     description="The name of the simulator to use, for example, myIphone. 
+                        Note: Both the Simulator Name and Target OS must be specified when 
+                        the Device Identifier is not specified."
                      default-value="${p?:resource/simulatorName}"/>
       </property>
       <property name="targetOS">
@@ -579,7 +585,9 @@
       <property name="simName">
         <property-ui type="textBox"
                      label="Simulator Name"
-                     description="The name of the simulator to delete, for example, myIphone."
+                     description="The name of the simulator to delete, for example, myIphone. 
+                        Note: Both the Simulator Name and Target OS must be specified when 
+                        the Device Identifier is not specified."
                      default-value="${p?:resource/simulatorName}"/>
       </property>
       <property name="targetOS">
@@ -642,7 +650,9 @@
       <property name="simName">
         <property-ui type="textBox"
                      label="Simulator Name"
-                     description="The name of the simulator to use, for example, myIphone."
+                     description="The name of the simulator to use, for example, myIphone. 
+                        Note: Both the Simulator Name and Target OS must be specified when 
+                        the Device Identifier is not specified."
                      default-value="${p?:resource/simulatorName}"/>
       </property>
       <property name="targetOS">
