--- a/build.xml
+++ b/build.xml
@@ -1,85 +1,252 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <!--
-- Licensed Materials - Property of IBM Corp.
-- IBM UrbanCode Deploy
-- (c) Copyright IBM Corporation 2011, 2014. All Rights Reserved.
--
-- U.S. Government Users Restricted Rights - Use, duplication or disclosure restricted by
-- GSA ADP Schedule Contract with IBM Corp.
+
+/**
+ * © Copyright IBM Corporation 2016.
+ * This is licensed under the following license.
+ * The Eclipse Public 1.0 License (http://www.eclipse.org/legal/epl-v10.html)
+ * U.S. Government Users Restricted Rights:  Use, duplication or disclosure restricted by GSA ADP Schedule Contract with IBM Corp.
+ */
+
 -->
-<project name="plugin-air-iOS" default="all" basedir="."
-    xmlns:codestation="antlib:com.urbancode.codestation2.client">
 
-    <property environment="env"/>
-    <property file=".build.properties"/>
+<project name="com.ucd.plugin.xcode" default="main" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
 
-    <defaultexcludes add="**/.ahs.*"/>
-    <defaultexcludes add="**/*.bom"/>
 
-    <!-- AHP settings -->
-    <property name="ahp.branch" value="air" />
-    <property name="ahp.project.name" value="${ant.project.name}" />
+        <property name="build.dir"          value="${basedir}/build" />
+        <property name="build.plugin.dir"   value="${build.dir}/plugin" />
+        <property name="build.tmp.dir"      value="${build.dir}/tmp" />
+        <property name="build.tmp.groovy.dir"   value="${build.tmp.dir}/groovy" />
+        <property name="build.tmp.java.dir"     value="${build.tmp.dir}/java" />
+        <property name="build.test.dir"         value="${build.dir}/test" />
+        <property name="build.test.java.dir"    value="${build.test.dir}/java" />
+        <property name="build.test.classes.dir" value="${build.test.dir}/classes" />
+        <property name="license.dir"        value="${basedir}/license" />
+        <property name="plugin.dir"         value="${basedir}/plugin" />
+        <property name="src.dir"            value="${basedir}/src" />
+        <property name="src.groovy.dir"     value="${src.dir}/groovy" />
+        <property name="src.java.dir"       value="${src.dir}/java" />
+        <property name="src.test.dir"       value="${src.dir}/test" />
+        <property name="src.test.java.dir"  value="${src.test.dir}/java" />
+        <property name="doc.dir"            value="${basedir}/doc" />
+        <property name="lib.dir"            value="${basedir}/lib" />
+        <property name="lib.build.dir"      value="${lib.dir}/build" />
+        <property name="lib.build.classes.dir" value="${lib.build.dir}/classes" />
+        <property name="lib.test.dir"      value="${lib.dir}/test" />
+        <property name="lib.test.java.dir"      value="${lib.test.dir}/java" />
+        <property name="lib.test.dir"       value="${lib.dir}/test" />
+        <property name="releases.dir"       value="${basedir}/releases" />
+        <property name="releases.report.dir"  value="${releases.dir}/report" />
 
-    <!-- =================================================== -->
-    <!-- PROJECT STRUCTURE                                   -->
-    <!-- =================================================== -->
 
-    <property name="lib.dir"           location="lib" />
+        <property name="version" value="dev" />
+        <property name="plugin" value="Apple-Xcode-UCD" />
+        <property name="pluginDist" value="${releases.dir}/${plugin}-v${version}.zip" />
 
-    <!-- =================================================== -->
-    <!-- MACROS                                              -->
-    <!-- =================================================== -->
+        <target name="main" depends="clean, resolve, compile-classes, build, dist">
+            <echo>Plugin build complete!</echo>
+        </target>
 
-    <macrodef name="emptyDir" description="Ensure that the target directory exists and is empty">
-        <attribute name="dir"/>
-        <attribute name="excludes" default=""/>
-        <sequential>
-            <mkdir dir="@{dir}"/>
-            <delete dir="@{dir}" includes="*/**" excludes="@{excludes}" includeemptydirs="true" defaultexcludes="false"/>
-        </sequential>
-    </macrodef>
+        <!-- ================================================================== -->
+        <!-- PATHS                                                              -->
+        <!-- ================================================================== -->
+        <path id="classpath">
+            <fileset dir="${lib.dir}">
+                <include name="*.jar"/>
+            </fileset>
+        </path>
 
-    <!-- =================================================== -->
-    <!-- TARGETS                                             -->
-    <!-- =================================================== -->
+        <path id="classpath.build">
+            <fileset dir="${lib.build.dir}">
+                <include name="*.jar"/>
+            </fileset>
+            <path refid="classpath"/>
+        </path>
 
-    <target name="dist" depends="resolve" description="Create distribution">
-        <ant antfile="plugin-build.xml" target="dist" inheritall="true"/>
-    </target>
+        <path id="classpath.test">
+            <fileset dir="${lib.test.dir}">
+                <include name="*.jar"/>
+            </fileset>
+            <path refid="classpath.build"/>
+        </path>
 
-    <target name="all" depends="resolve">
-      <ant antfile="plugin-build.xml" target="all" inheritall="true"/>
-    </target>
+        <!-- =================================================== -->
+        <!-- TASK DEFINTITION TARGET                             -->
+        <!-- =================================================== -->
 
-    <target name="clean" description="Cleans build output">
-      <emptyDir dir="${lib.dir}" excludes="ext/**"/>
-      <ant antfile="plugin-build.xml" target="clean" inheritall="true"/>
-    </target>
+        <target name="taskdef" unless="taskdef.no">
+            <taskdef name="groovyc" classname="org.codehaus.groovy.ant.Groovyc">
+                <classpath>
+                    <path refid="classpath.build"/>
+                </classpath>
+            </taskdef>
+        </target>
 
-    <target name="resolve" unless="resolve.no" description="Resolve all dependencies">
-        <mkdir dir="${lib.dir}"/>
-        <codestation:resolve
-                buildLife="${env.AH_BUILD_LIFE_ID}"
-                xmlFile="dependencies.xml"/>
-    </target>
+        <!-- =================================================== -->
+        <!-- BUILD TARGET                                        -->
+        <!-- =================================================== -->
 
-    <target name="publish" unless="publish.no"
-            description="Build artifacts and publish them to codestation">
-        <codestation:publish project="${ahp.project.name}"
-                           workflow="${ahp.workflow.name}"
-                           publishall="true"/>
-    </target>
+        <!-- Copy in the dependencies -->
+        <target name="build" depends="resolve">
 
-    <!-- =================================================== -->
-    <!-- TEST TARGETS                                        -->
-    <!-- =================================================== -->
+            <!-- inputs (info, upgrade) -->
+            <copy todir="${build.plugin.dir}">
+                <fileset dir="${plugin.dir}">
+                    <include name="info.xml" />
+                    <include name="upgrade.xml" />
+                    <include name="plugin.xml" />
+                </fileset>
 
-    <target name="run-tests" depends="resolve" unless="tests.no">
-      <ant antfile="plugin-build.xml" target="run-tests" inheritall="true"/>
-    </target>
+                <fileset dir="${src.dir}">
+                    <exclude name="**/groovy/"/>
+                    <exclude name="**/java/"/>
+                    <exclude name="**/test/**"/>
+                </fileset>
+            </copy>
 
-    <target name="run-single-test" depends="resolve" unless="tests.no">
-      <ant antfile="plugin-build.xml" target="run-single-test" inheritall="true"/>
-    </target>
+            <mkdir dir="${build.plugin.dir}/license"/>
+            <!-- copy license -->
+            <copy todir="${build.plugin.dir}/license">
+                <fileset dir="${license.dir}">
+                    <include name="EPL.txt" />
+                </fileset>
+            </copy>
 
+            <mkdir dir="${build.plugin.dir}/doc"/>
+            <!-- copy doc -->
+            <copy todir="${build.plugin.dir}/doc">
+                <fileset dir="${doc.dir}">
+                    <include name="HowTo.html" />
+                </fileset>
+            </copy>
+
+            <mkdir dir="${build.plugin.dir}/lib"/>
+            <!-- copy libs -->
+            <copy todir="${build.plugin.dir}/lib">
+                <fileset dir="${lib.dir}" >
+                    <exclude name="**/build/**"/>
+                    <exclude name="**/test/**"/>
+                </fileset>
+            </copy>
+
+             <!-- Copy Groovy and Java Classes -->
+            <mkdir dir="${build.plugin.dir}/classes"/>
+            <copy todir="${build.plugin.dir}/classes">
+                <fileset dir="${src.dir}/groovy">
+                    <include name="**/*.groovy" />
+                </fileset>
+            </copy>
+            <copy todir="${build.plugin.dir}/classes">
+                <fileset dir="${lib.build.classes.dir}">
+                    <include name="**/*.class" />
+                </fileset>
+            </copy>
+        </target>
+
+        <!-- =================================================== -->
+        <!-- DIST TARGET                                         -->
+        <!-- =================================================== -->
+        <target name="dist" depends="resolve">
+            <zip destfile="${pluginDist}" basedir="${build.plugin.dir}" update="false"/>
+        </target>
+
+        <!-- =================================================== -->
+        <!-- CLEAN TARGET                                        -->
+        <!-- =================================================== -->
+        <target name="clean">
+            <delete dir="build" />
+            <mkdir dir="build" />
+            <delete file="${pluginDist}" />
+        </target>
+
+        <!-- =================================================== -->
+        <!-- RESOLVE TARGET                                      -->
+        <!-- =================================================== -->
+        <target name="resolve" depends="install-ivy" unless="resolve.no" description="Resolve all dependencies">
+            <mkdir dir="${lib.dir}"/>
+            <mkdir dir="${lib.build.dir}"/>
+            <mkdir dir="${lib.test.dir}"/>
+            <ivy:retrieve conf="default" pattern="${lib.dir}/[artifact]-[revision](-[classifier]).[ext]"/>
+            <ivy:retrieve conf="build" pattern="${lib.dir}/[conf]/[artifact]-[revision](-[classifier]).[ext]"/>
+            <ivy:retrieve conf="test" pattern="${lib.dir}/[conf]/[artifact]-[revision](-[classifier]).[ext]"/>
+        </target>
+
+        <!-- =================================================== -->
+        <!-- INSTALL IVY TARGET                                  -->
+        <!-- =================================================== -->
+        <available classname="org.apache.ivy.Main" property="ivy.installed"/>
+        <target name="install-ivy" depends="-install, -fail"></target>
+
+        <target name="-install" description="Install ivy" unless="ivy.installed">
+            <!-- Installation -->
+            <property name="antHome" value="${user.home}${file.separator}.ant"/>
+            <mkdir dir="${antHome}${file.separator}lib"/>
+            <get dest="${antHome}${file.separator}lib${file.separator}ivy.jar" src="http://search.maven.org/remotecontent?filepath=org/apache/ivy/ivy/2.3.0/ivy-2.3.0.jar"/>
+            <echo message="SUCCESS! Ivy has been installed in ${antHome}." />
+
+            <!-- Determine whether to continue or fail -->
+            <property name="failIvy" value="true"/>
+            <condition property="do.fail">
+                <equals arg1="${failIvy}" arg2="true" />
+            </condition>
+        </target>
+
+        <!-- Default to fail if Ivy installed, unless -DfailIvy=false : Used for .travis -->
+        <target name="-fail" if="do.fail">
+            <fail message="Please run the build again.${line.separator}Note: If you get this message more than once, trying specify your Ant's home directory with the flag: ant -DantHome='ant/home/directory/here'" />
+        </target>
+
+        <!-- =================================================== -->
+        <!-- TEST TARGET                                         -->
+        <!-- =================================================== -->
+
+        <target name="run-tests" depends="compile-classes, compile-tests" unless="tests.no">
+
+            <mkdir dir="${releases.report.dir}"/>
+            <junit printsummary="yes" haltonfailure="no" showoutput="false" failureproperty="tests.failed">
+
+                <classpath refid="classpath.test" />
+                <classpath location="${lib.test.java.dir}" />
+
+                <formatter type="xml" />
+                <formatter type="plain" />
+
+                <batchtest fork="yes" todir="${releases.report.dir}">
+                    <fileset dir="${src.test.java.dir}">
+                        <include name="**/*Test.java" />
+                    </fileset>
+                </batchtest>
+
+            </junit>
+            <fail message="JUnit Tests Failed. View 'releases/report' for full output log." if="tests.failed" />
+        </target>
+
+        <!-- =================================================== -->
+        <!-- COMPILE TARGETS                                     -->
+        <!-- =================================================== -->
+        <target name="compile-classes" description="Compile Groovy or Java classes." depends="resolve, taskdef">
+            <!-- Groovy -->
+            <mkdir dir="${build.tmp.groovy.dir}"/>
+            <groovyc srcdir="${src.dir}" destdir="${build.tmp.groovy.dir}">
+                <include name="**/*.groovy"/>
+                <classpath refid="classpath.build"/>
+                <javac debug="on" deprecation="true"/>
+            </groovyc>
+            <delete dir="${build.tmp.groovy.dir}" />
+
+            <!-- Java -->
+            <mkdir dir="${lib.build.classes.dir}"/>
+            <javac srcdir="${src.java.dir}" destdir="${lib.build.classes.dir}" includeantruntime="false">
+                <include name="**/*.java"/>
+                <classpath refid="classpath.build"/>
+            </javac>
+        </target>
+
+        <!-- Java Tests -->
+        <target name="compile-tests" description="Compile Java Test Files..." depends="compile-classes">
+            <mkdir dir="${lib.test.java.dir}"/>
+            <javac srcdir="${src.test.java.dir}" destdir="${lib.test.java.dir}" includeantruntime="false">
+                <classpath refid="classpath.test"/>
+            </javac>
+        </target>
 </project>
+
